:lipstick: Fixing some bg color & Header Visibility on other page :lipstick:

--- a/src/app/_components/CardElement/CardElement.scss
+++ b/src/app/_components/CardElement/CardElement.scss
@@ -5,7 +5,7 @@
     aspect-ratio: 3/4;
     background-position: center;
     background-size: contain;
-    background-color: $primary-color;
+    background-color: $prodcuts-color;
     overflow: hidden;
     display: flex;
     flex-direction: column;
